[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game/world/entity/entities/enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/resources/sprite_frames/char/RushRogueSpriteFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/game/world/entity/components/state_machine/StateMachine.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rush_rogue/state_machine/RushRogueState.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rush_rogue/state_machine/RushRoguePartolState.gd" type="Script" id=5]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rush_rogue/state_machine/RushRogueRushState.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 4 )

[node name="RushRogue" instance=ExtResource( 1 )]
collision_mode = 2
player_detection_range_in_tiles = 2.0

[node name="BodyShape" parent="." index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InHitBox" index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutHitBox" index="0"]
shape = SubResource( 1 )

[node name="RushRogueSprite" type="AnimatedSprite" parent="." index="5"]
position = Vector2( 0, -4 )
frames = ExtResource( 2 )
animation = "walk"
frame = 2
playing = true

[node name="RushRogueFSM" parent="." index="6" instance=ExtResource( 3 )]
__inital_state = NodePath("RushRoguePatrolState")

[node name="RushRoguePatrolState" parent="RushRogueFSM" index="0" instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="RushRogueRushState" parent="RushRogueFSM" index="1" instance=ExtResource( 4 )]
script = ExtResource( 6 )

[node name="RushTimer" type="Timer" parent="RushRogueFSM/RushRogueRushState" index="0"]
wait_time = 0.8
one_shot = true

[node name="VisibilityEnabler2D" parent="." index="7"]
position = Vector2( 7.15256e-07, 2.38419e-07 )
scale = Vector2( 0.7, 0.4 )

[connection signal="player_detected" from="." to="RushRogueFSM/RushRogueRushState" method="_on_RushRogue_player_detected"]
[connection signal="player_visual_lost" from="." to="RushRogueFSM/RushRoguePatrolState" method="_on_RushRogue_player_visual_lost"]
[connection signal="timeout" from="RushRogueFSM/RushRogueRushState/RushTimer" to="RushRogueFSM/RushRogueRushState" method="_on_RushTimer_timeout"]
